--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <script src="https://d3js.org/d3.v3.min.js"></script>
         <script src="https://d3js.org/topojson.v1.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="d3.promise.js"></script>
-        <script src="q.js"></script>
+        <script src="https://cdn.rawgit.com/kristw/d3.promise/master/dist/d3.promise.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="./css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="./css/main.css">
+        <link href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="./css/main.css" />
     </head>
     <body>
         <div class="page-heading">Bikes picked up at: <span id="SelectedTime">00:00</span> on the <select id="SelectedDate"></select></div>
@@ -208,7 +207,7 @@
                 //
             }
 
-            d3.promise.json("muc.json").then(function(raw) {
+            d3.promise.json("./data/muc.json").then(function(raw) {
 
                 states = topojson.feature(raw, raw.objects.states);
 
