--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
         <link href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="./css/main.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
     </head>
     <body>
         <div class="page-heading">Bikes picked up at: <span id="SelectedTime">00:00</span> on the <select id="SelectedDate"></select></div>
